@@ -1,6 +1,8 @@
 package com.safetynet.alerts;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.safetynet.alerts.controller.PersonInfoController;
+import com.safetynet.alerts.dto.PersonFireInfoDTO;
 import com.safetynet.alerts.repositories.FirestationRepositories;
 import com.safetynet.alerts.repositories.MedicalRecordRepositories;
 import com.safetynet.alerts.repositories.PersonRepositories;
@@ -16,6 +18,7 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultActions;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
@@ -28,6 +31,8 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @WebMvcTest
 @AutoConfigureMockMvc
 public class PersonInfoControllerTests {
+
+    private PersonInfoController personInfoController;
 
     @MockBean
     MedicalRecordService medicalRecordService;
@@ -54,9 +59,11 @@ public class PersonInfoControllerTests {
         String firstName = "Test First Name";
         String lastName = "Test Last Name";
 
-        when(personService.getPersonByCompleteName(firstName, lastName)).thenReturn(Arrays.asList("TestAddress1", "TestAddress2"));
+        List<Object[]> personList = Arrays.asList(new Object[]{"Test Address 1"}, new Object[]{"Test Address 2"});
+        when(personService.getPersonByCompleteName(firstName, lastName)).thenReturn(personList);
         when(medicalRecordService.getAgeByCompleteName(firstName, lastName)).thenReturn(30);
-        when(medicalRecordService.getMedicalRecordByCompleteName(firstName, lastName)).thenReturn(Arrays.asList(new Object[]{"Medication1", "Allergies1"}, new Object[]{"Medication2", "Allergies2"}));
+        List<Object[]> medicalRecordList = Arrays.asList(new Object[]{"Medication 1", "Allergies 1"}, new Object[]{"Medication 2", "Allergies 2"});
+        when(medicalRecordService.getMedicalRecordByCompleteName(firstName, lastName)).thenReturn(medicalRecordList);
 
         ResultActions resultActions = mockMvc.perform(get("/personInfo")
                 .param("firstName", firstName)
@@ -64,56 +71,61 @@ public class PersonInfoControllerTests {
                 .contentType(MediaType.APPLICATION_JSON));
 
         resultActions.andExpect(status().isOk())
-                .andExpect(jsonPath("$.personDetails[0]").value("TestAddress1"))
-                .andExpect(jsonPath("$.personDetails[1]").value("TestAddress2"))
+                .andExpect(jsonPath("$.personDetails[0]").value("Test Address 1"))
+                .andExpect(jsonPath("$.personDetails[1]").value("Test Address 2"))
                 .andExpect(jsonPath("$.age").value(30))
-                .andExpect(jsonPath("$.medicalRecords[0][0]").value("Medication1"))
-                .andExpect(jsonPath("$.medicalRecords[0][1]").value("Allergies1"))
-                .andExpect(jsonPath("$.medicalRecords[1][0]").value("Medication2"))
-                .andExpect(jsonPath("$.medicalRecords[1][1]").value("Allergies2"));
+                .andExpect(jsonPath("$.medicalRecords[0][0]").value("Medication 1"))
+                .andExpect(jsonPath("$.medicalRecords[0][1]").value("Allergies 1"))
+                .andExpect(jsonPath("$.medicalRecords[1][0]").value("Medication 2"))
+                .andExpect(jsonPath("$.medicalRecords[1][1]").value("Allergies 2"));
     }
 
     @Test
     public void testGetFireInfo() throws Exception {
         String address = "TestAddress";
 
-        // Mocking data
-        List<Object[]> personList = Collections.singletonList(new Object[]{"TestFirstName", "TestLastName", "111-111-1111"});
-        List<Object[]> firestationNumber = Collections.singletonList(new Object[]{"TestStation1"});
+
+        List<Object[]> personList = Arrays.asList(new Object[][]{new Object[]{"TestFirstName", "TestLastName", "111-111-1111"}});
+        String firestationNumber = "TestStation1";
+        List<Object[]> medicalRecordList = Collections.emptyList();
         String firstName = "TestFirstName";
         String lastName = "TestLastName";
 
-        when(personService.getPersonByAddress(address)).thenReturn(personList);
-        when(medicalRecordService.getAgeByCompleteName(firstName, lastName)).thenReturn(30);
+        PersonFireInfoDTO personFireInfoDTO = new PersonFireInfoDTO(personList, 30, new ArrayList<>());
+        List<PersonFireInfoDTO> persons = Collections.singletonList(personFireInfoDTO);
+
+        when(personService.getFLPByAddress(address)).thenReturn(personList);
         when(firestationService.getFireStationByAddress(address)).thenReturn(firestationNumber);
+        when(medicalRecordService.getMedicalRecordByCompleteName(firstName, lastName)).thenReturn(medicalRecordList);
+        when(medicalRecordService.getAgeByCompleteName(firstName, lastName)).thenReturn(30);
 
-        // Perform the request and assert the response
-        ResultActions resultActions = mockMvc.perform(get("/fire")
-                .param("address", address)
-                .contentType(MediaType.APPLICATION_JSON));
 
-        resultActions.andExpect(status().isOk())
-                .andExpect(jsonPath("$.personList[0].personDetails[0]").value("TestFirstName"))
-                .andExpect(jsonPath("$.personList[0].personDetails[1]").value("TestLastName"))
-                .andExpect(jsonPath("$.personList[0].personDetails[2]").value("111-111-1111"))
-                .andExpect(jsonPath("$.personList[0].age").value(30)) // Assuming age is 30
-                .andExpect(jsonPath("$.firestationNumber[0]").value("TestStation1"));
+        mockMvc.perform(get("/fire")
+                        .param("address", address))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.personList[0].personDetails[0][0]").value("TestFirstName"))
+                .andExpect(jsonPath("$.personList[0].personDetails[0][1]").value("TestLastName"))
+                .andExpect(jsonPath("$.personList[0].personDetails[0][2]").value("111-111-1111"))
+                .andExpect(jsonPath("$.personList[0].age").value(30))
+                .andExpect(jsonPath("$.firestationNumber").value("TestStation1"));
     }
 
     @Test
     void testGetFloodInfo() throws Exception {
-        List<String> stations = Arrays.asList("1", "2");
+        List<String> firestationAddress1 = List.of("TestAddress1");
+        List<String> firestationAddress2 = List.of("TestAddress2");
+        List<Object[]> personList1 = Arrays.asList(new Object[][]{new Object[]{"TestFirstName1", "TestLastName1", "111-111-1111"}});
+        List<Object[]> personList2 = Arrays.asList(new Object[][]{new Object[]{"TestFirstName2", "TestLastName2", "222-222-2222"}});
 
-        when(firestationService.getAddressByFireStationNumber("1")).thenReturn(Collections.singletonList(new Object[]{"TestAddress1"}));
-        when(firestationService.getAddressByFireStationNumber("2")).thenReturn(Collections.singletonList(new Object[]{"TestAddress2"}));
-        when(personService.getPersonByAddress("TestAddress1")).thenReturn(Collections.singletonList(new Object[]{"TestFirstName1", "TestLastName1", "111-111-1111"}));
-        when(personService.getPersonByAddress("TestAddress2")).thenReturn(Collections.singletonList(new Object[]{"TestFirstName2", "TestLastName2", "222-222-2222"}));
+        when(firestationService.getAddressByFireStationNumber("1")).thenReturn(firestationAddress1);
+        when(firestationService.getAddressByFireStationNumber("2")).thenReturn(firestationAddress2);
+        when(personService.getFLPByAddress("TestAddress1")).thenReturn(personList1);
+        when(personService.getFLPByAddress("TestAddress2")).thenReturn(personList2);
         when(medicalRecordService.getMedicalRecordByCompleteName("TestFirstName1", "TestLastName1")).thenReturn(Collections.emptyList());
         when(medicalRecordService.getMedicalRecordByCompleteName("TestFirstName2", "TestLastName2")).thenReturn(Collections.emptyList());
         when(medicalRecordService.getAgeByCompleteName("TestFirstName1", "TestLastName1")).thenReturn(30);
         when(medicalRecordService.getAgeByCompleteName("TestFirstName2", "TestLastName2")).thenReturn(25);
 
-        // Perform the request and assert the response
         mockMvc.perform(get("/flood/stations")
                         .param("stations", "1", "2"))
                 .andExpect(status().isOk())
@@ -132,8 +144,8 @@ public class PersonInfoControllerTests {
     @Test
     void testGetPhoneAlert() throws Exception {
         String firestationNumber = "1";
-
-        when(firestationService.getAddressByFireStationNumber("1")).thenReturn(Collections.singletonList(new Object[]{"TestAddress1"}));
+        String address = "TestAddress1";
+        when(firestationService.getAddressByFireStationNumber("1")).thenReturn(Collections.singletonList(address));
         when(personService.getPhoneByAddress("TestAddress1")).thenReturn(Collections.singletonList(new Object[]{"111-111-1111"}));
 
         mockMvc.perform(get("/phoneAlert")
@@ -163,8 +175,8 @@ public class PersonInfoControllerTests {
     @Test
     void testGetInfoByFirestation() throws Exception {
         String stationNumber = "TestStationNumber";
-
-        when(firestationService.getAddressByFireStationNumber(stationNumber)).thenReturn(Arrays.asList(new Object[]{"TestAddress1"}, new Object[]{"TestAddress2"}));
+        List<String> addressList = Arrays.asList("TestAddress1", "TestAddress2");
+        when(firestationService.getAddressByFireStationNumber(stationNumber)).thenReturn(addressList);
         when(personService.getPersonForFirestations("TestAddress1")).thenReturn(Collections.singletonList(new Object[]{"TestFirstName1", "TestLastName1", "TestAddress1", "TestPhone1"}));
         when(personService.getPersonForFirestations("TestAddress2")).thenReturn(Collections.singletonList(new Object[]{"TestFirstName2", "TestLastName2", "TestAddress2", "TestPhone2"}));
         when(medicalRecordService.childOrNot("TestFirstName1", "TestLastName1")).thenReturn(true);
